# athena

./: .gitignore  README.md  alias.sh  dev-requirements.txt  mkdocs.yml  pipeline.yml  pyproject.toml
.github/workflows/: github-actions.yml
athena/: __main__.py  cache.py  client.py  display.py  file.py  format.py  json.py  request.py  resource.py  run.py  server.py  status.py  trace.py
docs/: cli.md  index.md
docs/API/: client.md
example/: server.py
example/athena/: get_planets.py  run.py  server.py
example/athena/dir1/: get_planet.py
example/athena/my-workspace/: variables.yml
example/athena/my-workspace/collections/my-collection/: fixture.py  secrets.yml  variables.yml
example/athena/my-workspace/collections/my-collection/run/: example.py  hello.py
example/athena/my-workspace/collections/my-collection/run/api/: get_planet.py  get_planets.py
src/: README.md  pyproject.toml
src/athena/: __main__.py  client.py  file.py  format.py  resource.py  run.py  status.py  trace.py
tests/e2e/: run_tests.sh
tests/e2e/api/: test_server.py
tests/e2e/cli/: test_import_export.py
