[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
requires-python = ">=3.11"
name = "haondt-athena"
authors = [{name = "haondt"}]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"
description = "a file-based rest api client"
version = "0.0.0"
license = { file = "LICENSE" }
keywords = ["api", "rest"]
dependencies = [
    "click>=8.1.7",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "aiohttp>=3.8.6",
    "Pygments>=2.16.1",
    "watchdog>=4.0.0"
]

[tool.flit.module]
name = "athena"

[project.urls]
Homepage = "https://gitlab.com/haondt/athena"
Repository = "https://gitlab.com/haondt/athena"

[project.scripts]
athena = "athena.__main__:main"
