[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "click ~= 8.1.7",
    "PyYAML ~= 6.0.1",
    "requests ~= 2.31.0",
    "aiohttp ~= 3.8.6",
    "Pygments ~= 2.16.1"
]
